Created title div
created title div

--- a/Web/index.html
+++ b/Web/index.html
@@ -8,8 +8,8 @@
   <body>
     <div id="PageContainer" class="container-fluid">
       <div id="FirstRow"class="row">
-        <div id="NavigationBar" class="col-sm-3">
-          <ul class="nav flex-column">
+        <div id="NavigationBarContainer" class="col-sm-3">
+          <ul id="NavigationBar"class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link active" href="#">Item 1</a>
             </li>
@@ -27,10 +27,10 @@
 
 
 
-        <div class="col-sm-9">
-          <div class="row">
-            <div class="col-sm-12">
-
+        <div id="RightPage" class="col-sm-9">
+          <div id="TitleRow"class="row">
+            <div id="title" class="col-sm-12">
+              <h1>Central Park Conservancy - Data Dashboard</h1>  
             </div>
           </div>
         </div>
