--- a/Web/index.html
+++ b/Web/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Central Park</title>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
 
@@ -30,7 +31,7 @@
         <div id="RightPage" class="col-sm-9">
           <div id="TitleRow"class="row">
             <div id="title" class="col-sm-12">
-              <h1>Central Park Conservancy - Data Dashboard</h1>  
+              <h1>Central Park Conservancy - Data Dashboard</h1>
             </div>
           </div>
         </div>
