Added social media box
Added social media box

--- a/Web/index.html
+++ b/Web/index.html
@@ -27,13 +27,20 @@
         </div>
 
 
-
         <div id="RightPage" class="col-sm-9">
           <div id="TitleRow"class="row">
             <div id="title" class="col-sm-12">
               <h1>Central Park Conservancy - Data Dashboard</h1>
             </div>
           </div>
+          <div id="SocialMediaBoxRow"class="row">
+            <div id="SocialMediaBox" class="col-sm-12">
+              <h2 id="SocialMediaHeading">Social Media</h2>
+            </div>
+          </div>
+
+
+
         </div>
       </div>
     </div>
