updated css file

--- a/Web/index.html
+++ b/Web/index.html
@@ -34,9 +34,15 @@
               <h1>Central Park Conservancy - Data Dashboard</h1>
             </div>
           </div>
-          <div id="SocialMediaBoxRow"class="row">
-            <div id="SocialMediaBox" class="col-sm-12">
-              <h2 id="SocialMediaHeading">Social Media</h2>
+
+
+          <div id="MainCardRow" class="row">
+            <div id="SocialMediaBox" class="col-sm-6">
+              <h2>Social Media</h2>
+            </div>
+
+            <div id="MobileBox" class="col-sm-6">
+              <h2>Mobile</h2>
             </div>
           </div>
 
