--- a/Web/index.html
+++ b/Web/index.html
@@ -39,5 +39,10 @@
     </div>
   </body>
 
+<!-- Firebase Web Script -->
+  <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+<!-- Firebase Web Script -->
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+
 
 </html>
