--- a/Web/index.html
+++ b/Web/index.html
@@ -3,6 +3,7 @@
     <title>Central Park</title>
     <link rel="stylesheet" href="pageStyle.css" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   </head>
 
 
@@ -39,11 +40,32 @@
           <div id="MainCardRow" class="row">
             <div id="SocialMediaBox" class="col-sm-6">
               <h2>Social Media</h2>
+              <div class="row">
+                <div class="col-sm-12 card">
+                  User Engagement <br />
+
+                  18,000
+                </div>
+              </div>
             </div>
 
             <div id="MobileBox" class="col-sm-6">
               <h2>Mobile</h2>
+              <div class="row">
+                <div class="col-sm-12 card">
+                  User Engagement <br />
+                  18,000
+                </div>
+              </div>
+
+
+
             </div>
+
+
+
+
+
           </div>
 
 
