Image ID card 1

--- a/Web/index.html
+++ b/Web/index.html
@@ -41,11 +41,18 @@
             <div id="SocialMediaBox" class="col-sm-6">
               <h2>Social Media</h2>
               <div class="row">
-                <div class="col-sm-12 card">
+                <div class="col-sm-12 card" style="margin: 16px">
 
                   User Engagement <br />
                   18,000
                 </div>
+
+                <!-- Twitter Cards -->
+                <div class="col-sm-12 card">
+                  <img src="images/skating.jpg" style="width: content-box; max-height: 300px; vertical-align: center;">
+                  <p>Skating</p>
+                </div>
+
               </div>
             </div>
 
