--- a/Web/index.html
+++ b/Web/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="pageStyle.css" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+      <script src="functionality.js"></script>
   </head>
-
 
 
   <body>
@@ -32,7 +32,9 @@
         <div id="RightPage" class="col-sm-11">
           <div id="TitleRow"class="row">
             <div id="title" class="col-sm-12">
-              <h1>Central Park Conservancy - Data Dashboard</h1>
+              <h1>Central Park Conservancy - Data Dashboard</h1> <br />
+              <button id="Retrieve">Retrieve</button>
+              <input id="data"type="text" name="data" value="">
             </div>
           </div>
 
