--- a/Web/index.html
+++ b/Web/index.html
@@ -1,7 +1,4 @@
-<!-- Testing -->
-
 <html>
-
   <head>
     <title>Central Park</title>
     <link rel="stylesheet" href="pageStyle.css" />
@@ -14,40 +11,6 @@
     <script type="text/javascript" src="https://sdk.clarifai.com/js/clarifai-latest.js"></script>
 
   </head>
-
-
-<head>
-  <title>Central Park</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-
-
-  <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
-  <script src="./firestoreapp.js"></script>
-</head>
-
-
-
-<body>
-  <div id="PageContainer" class="container-fluid">
-    <div id="FirstRow" class="row">
-      <div id="NavigationBarContainer" class="col-sm-3">
-        <ul id="NavigationBar" class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Item 1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Item 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Item 3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Item 4</a>
-          </li>
-        </ul>
-      </div>
-
 
 
   <body>
@@ -85,35 +48,31 @@
             <div id="SocialMediaBox" class="col-sm-6">
               <h2>Social Media</h2>
               <div class="row">
-                <div class="col-sm-12 card" style="margin: 16px">
-
+                <div class="col-sm-12 card">
                   User Engagement <br />
                   18,000
                 </div>
+                <div class="col-sm-12" style="height:20px;">
 
+                </div>
                 <!-- Twitter Cards -->
                 <div class="col-sm-12 card">
                   <img src="images/skating.jpg" style="width: content-box; max-height: 300px; vertical-align: center;">
                   <p>Skating</p>
                 </div>
-
               </div>
             </div>
-
-
-      <div id="RightPage" class="col-sm-9">
-        <div id="TitleRow" class="row">
-          <div id="title" class="col-sm-12">
-            <h1>Central Park Conservancy - Data Dashboard</h1>
+            <div id="MobileBox" class="col-sm-6">
+              <h2>Mobile</h2>
+              <div class="row">
+                <div class="col-sm-12 card">
+                  User Engagement <br />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <!-- <script src="./firestoreapp.js"></script> -->
-
-</body>
-
-<!--Firebase Web Script-->
-</html>
+  </body>
+  </html>
