Added card 2 -- incomplete

--- a/Web/index.html
+++ b/Web/index.html
@@ -64,6 +64,14 @@
                        id="photo1" style="width: content-box; max-height: 300px; vertical-align: center;">
                   <p id="photo1txt">Oct 20th. 2018</p>
                 </div>
+
+
+                <div class="col-sm-12 card">
+                  <img src="https://www.centralpark.com/downloads/3367/download/ice-skating-in-central-park.jpe?cb=acb3e4dcca282bf1997957dda4b08255&w=-1"
+                       id="photo1" style="width: content-box; max-height: 300px; vertical-align: center;">
+                  <p id="photo1txt">Oct 20th. 2018</p>
+                </div>
+
               </div>
             </div>
             <div id="MobileBox" class="col-sm-6">
