--- a/Web/index.html
+++ b/Web/index.html
@@ -18,20 +18,11 @@
 
   <body onload="returnData()">
     <div id="PageContainer" class="container-fluid">
-      <div id="FirstRow"class="row">
+      <div id="FirstRow" class="row">
         <div id="NavigationBarContainer" class="col-sm-1">
           <ul id="NavigationBar"class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Item 1</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Item 2</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Item 3</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Item 4</a>
+              <a class="nav-link active" id="homeBtn" style="color: white" href="#">Home</a>
             </li>
           </ul>
         </div>
