--- a/Web/index.html
+++ b/Web/index.html
@@ -110,7 +110,7 @@
           <!-- <img src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=600x300&maptype=roadmap
 &markers=color:blue%7Clabel:S%7C40.785091,-73.968285&markers=color:green%7Clabel:G%7C40.785091,-73.968285
 &markers=color:red%7Clabel:C%7C40.785091,-73.968285
-&key=AIzaSyCmjLBS51yAofRywlbjMXsckcv3_ds0KQc" > -->
+&key=" > -->
           <div id ="container">
           </div id = "innerBox">
             <div id ="map"></div>
